...
  Scaffold(
      content = {
        Box(modifier = Modifier.fillMaxSize().testTag("MapScreen")) {
          // Google Map
          AndroidView(
...
                }
              },
              modifier = Modifier.fillMaxSize().testTag("GoogleMap"))

          LaunchedEffect(locationUpdated) {
...
                        .align(Alignment.BottomEnd)
                        .offset(y = (-150).dp)
                        .testTag("createRouteButton")) {
                  Image(
                      painter = painterResource(id = R.drawable.addbutton),
...
                        .offset(y = (-90).dp)
                        .size(54.dp)
                        .testTag("routeSearchButton")) {
                  Box(
                      modifier = Modifier.size(48.dp).background(Color(0xff00b3ff), CircleShape),
...
                        .offset(y = (-150).dp)
                        .size(48.dp)
                        .testTag("addCheckpointButton")) {
                  Box(
                      modifier = Modifier.size(48.dp).background(Color(0xff00b3ff), CircleShape),
...
                        Icon(
                            painter = painterResource(R.drawable.map_marker),
                            contentDescription = "Add checkpoint",
                            tint = Color.Red)
                      }
...
                        .align(Alignment.BottomEnd)
                        .offset(y = (-90).dp)
                        .testTag("stopRouteButton"),
                content = {
                  Image(
...
          // Search bar
          Column(Modifier.align(Alignment.TopCenter).offset(y = 16.dp)) {
            Box(Modifier.testTag("SearchBar")) {
              BasicTextField(
                  value = allroutes,
...
                          .height(40.dp)
                          .offset(y = 3.dp)
                          .testTag("SearchBarTextField"))
              IconButton(
                  onClick = {
...
                  modifier =
                      Modifier.align(Alignment.CenterEnd)
                          .testTag("SearchCleanButton")
                          .size(25.dp)) {
                    androidx.compose.material3.Icon(
...
                        .offset(y = 1.dp)
                        .align(Alignment.TopStart)
                        .testTag("gobackbutton"),
                containerColor = Color.White,
                content = {
...
                Row(verticalAlignment = Alignment.CenterVertically) {
                  Text(
                      "New Checkpoint",
                      style = TextStyle(fontWeight = FontWeight.Bold, fontSize = 24.sp),
                      modifier = Modifier.weight(1f))
...
                      },
                      modifier = Modifier.size(36.dp)) {
                        Icon(Icons.Default.Close, contentDescription = "Close", tint = Color.Black)
                      }
                }
...
                Column(modifier = Modifier.padding(16.dp)) {
                  Text(
                      "Checkpoint name",
                      style = TextStyle(fontWeight = FontWeight.Bold, fontSize = 16.sp),
                      modifier = Modifier.padding(bottom = 8.dp))
...
                      shape = RoundedCornerShape(8.dp),
                      onValueChange = { checkpointTitle = it },
                      label = { Text("Name:") },
                      modifier = Modifier.fillMaxWidth())
                  Spacer(modifier = Modifier.height(36.dp))
...
                      Image(
                          bitmap = currentImage.value!!.asImageBitmap(),
                          contentDescription = "checkpoint_image",
                          modifier = Modifier.size(200.dp))
                    }
...
                            Icon(
                                painterResource(R.drawable.camera_icon),
                                contentDescription = "camera_icon",
                                modifier = Modifier.size(50.dp))
                          }
...
                      modifier = Modifier.width(150.dp).align(Alignment.Center)) {
                        Text(
                            "Confirm",
                            style = TextStyle(fontWeight = FontWeight.Bold, fontSize = 24.sp),
                            color = Color.White)
...
